@@ -253,10 +253,10 @@ function pts_version_codenames()
 		);
 }
 
-pts_define('PTS_VERSION', '8.2.0m1');
-pts_define('PTS_CORE_VERSION', 8112);
+pts_define('PTS_VERSION', '8.2.0m2');
+pts_define('PTS_CORE_VERSION', 8120);
 pts_define('PTS_CODENAME', 'RAKKESTAD');
-pts_define('PTS_RELEASE_DATE', '20180721');
+pts_define('PTS_RELEASE_DATE', '20180815');
 
 pts_define('PTS_IS_CLIENT', (defined('PTS_MODE') && strstr(PTS_MODE, 'CLIENT') !== false));
 pts_define('PTS_IS_WEB_CLIENT', (defined('PTS_MODE') && PTS_MODE == 'WEB_CLIENT'));
